--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,6 @@
 *.gch
 *.pch
 
-# Linker files
-*.ilk
-
-# Debugger Files
-*.pdb
-
 # Compiled Dynamic libraries
 *.so
 *.dylib
@@ -37,5 +31,9 @@
 *.out
 *.app
 
-# debug information files
-*.dwo
+# Visual Studio
+.vs/*
+
+# Release
+x64/*
+*/x64/*
