--- a/jni-hook.vcxproj
+++ b/jni-hook.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{397aec01-0970-4f7a-a447-6bf163773aa8}</ProjectGuid>
-    <RootNamespace>loader</RootNamespace>
+    <RootNamespace>jni-hook</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -146,13 +146,16 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
-      <AdditionalDependencies>include/jvm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>lib/jvm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="hooks.cpp" />
+    <ClCompile Include="hooks.h" />
     <ClCompile Include="jniutil.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\classfile_constants.h" />
